{
    "name": "InputMario",
    "maps": [
        {
            "name": "actionMovimiento",
            "id": "53d3bd3a-f3ef-4e4e-bd61-8ba6873d80f8",
            "actions": [
                {
                    "name": "andar",
                    "type": "Value",
                    "id": "ec19f759-54dc-4f60-a593-936390a162d6",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone(min=0.45)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "corre",
                    "type": "Button",
                    "id": "099c57db-e2f2-4b39-a84b-8c9595b1fc5e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "salto",
                    "type": "Button",
                    "id": "2a257ce8-dcb2-4a64-8ab8-4b407d0622cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a678f7e2-d878-42e5-b201-b8fe9d19fb21",
                    "path": "<DualShockGamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "andar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3858f68-b35c-4b04-9e7f-70c6f96eac82",
                    "path": "<DualShockGamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "corre",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f991153f-eadd-4474-aae5-ff9a36b4554d",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "salto",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}